total 7821 words, -comments

--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -222,13 +222,13 @@ Comparing forests, upper canopies of temperate deciduous species can have greate
 
 **Leaf thermoregulation is controlled by leaf traits, that are in-turn adapted to their environment [@michaletzEnergeticCarbonEconomic2016]. Therefore, are critical in maintaining desirable $T_{leaf}$ and shaping leaf metabolism (following section) across forest vertical strata (Figs. `r fig_NEON_vertical`, `r SIfigs_NEON_all`)[@michaletzPlantThermoregulationEnergetics2015; @zwienieckiHydraulicLimitationsImposed2004]**
 
-Leaf morphology adapts to the local microenvironment during leaf expansion [@zwienieckiHydraulicLimitationsImposed2004] where degrees of direct to diffused light and resultant water demands shape sun vs. shade leaves, and their necessary vascular architecture [@casasSunShadeLeaves2011; @zwienieckiHydraulicLimitationsImposed2004; @keenanGlobalLeafTrait2016; @niinemetsLeafAgeDependent2016a]. This dichotomy in leaves is observed along the vertical gradient where canopy-leaves vary dramatically from canopy-interior and understory due to the differences in biophysical conditions (Figs. `r fig_NEON_vertical`, `r SIfigs_NEON_all`). 
+Leaf morphology adapts to the local microenvironment during leaf expansion [@zwienieckiHydraulicLimitationsImposed2004] where degrees of direct to diffused light and resultant water demands shape sun vs. shade leaves, and their vascular architecture [@casasSunShadeLeaves2011; @zwienieckiHydraulicLimitationsImposed2004; @keenanGlobalLeafTrait2016; @niinemetsLeafAgeDependent2016a]. This dichotomy in leaves is observed along the vertical gradient where canopy-leaves vary dramatically from canopy-interior and understory due to the differences in biophysical conditions (Figs. `r fig_NEON_vertical`, `r SIfigs_NEON_all`). 
 But at greater tree height, biological--tree-height--and biophysical--light, temperature, and evaporative demand (Fig. `r fig_NEON_vertical`)--also play a role in shaping leaf traits 
 
 In particular, hydraulic constraints increase with height on a tree [REFS; *McDowell-isotopes book chapter*; @cobleLightAcclimationOptimizes2015; *Couvreur et al., 2018*] such that gas exchange is strongly constrained by at the tops of(~100 m. tall *Sequoia sempervirens*; *Ambrose et al. 2009, 2010*).
 Isolating height (>35m) under constant light show that, canopy $gs$ decreases with increasing $VPD$  [@schaferEffectTreeHeight2000; @ambroseEffectsHeightTreetop2010]. Morphologically, leaf size [Kaare H. Jensen and Maciej A. Zwieniecki, 2013] and lobation [@kusiPlasticLeafMorphology2020] have shown to decrease, while leaf mass per area (at greater than 20m) to increase  [@cobleLightAcclimationOptimizes2015; @kenzoHeightrelatedChangesLeaf2015; @rijkersEffectTreeHeight2000a; @chinLeafAcclimationLight2017]. 
 
-However, disentangling tree-height related biological and biophysical drivers (Fig. `r fig_NEON_vertical`) on leaf traits remains an important area for research, which is sparse, but is beyond the scope of the current review. Here, our primary interest is in how leaf traits and function vary across the vertical gradient from the canopy-top to the understory in forests. We note that patterns across light and height gradients are generally similar, at least in direction (Table 1), but likely to be modified by covarying biophysical constraints. 
+Disentangling tree-height related biological and biophysical drivers (Fig. `r fig_NEON_vertical`) of leaf traits remains an important area for research, which is sparse, but is beyond the scope of the current review. Here, our primary interest is in how leaf traits and function vary across the vertical gradient from the canopy-top to the understory in forests. We note that patterns across light and height gradients are generally similar, at least in direction (Table 1), but likely to be modified by covarying biophysical constraints. 
 
 ### *(clarify intra- vs inter-specific variation - 1 short paragraph)*
 
@@ -239,7 +239,7 @@ However, when it comes to understanding and modeling forest ecosystem function, 
 
 ### Intraspecific variation
 
-Within-canopy gradients of individuals, leaf traits vary--going from buffered [shaded] to exposed canopy positions [@casasSunShadeLeaves2011]-- and therefore exhibit patterns in leaf anatomical, structural and biochemical traits [@sackHowStrongIntracanopy2006; @niinemetsWorldwideAnalysisWithincanopy2015; @chenLeafEconomicsSpectrum2020]. These trait-patterns contribute to [understanding] vertical $T_{leaf}$ dynamics [@fauset_differences_2018; @michaletzEnergeticCarbonEconomic2016] where Table `r table_leaf_traits` summarizes relevant traits for thermal sensitivity. The characterization of trait relationships and responses through the vertical canopy is a strong research need because LES theory was developed using mainly sun exposed (upper canopy) leaves [@chenLeafEconomicsSpectrum2020; @keenanGlobalLeafTrait2016]. 
+Within-canopy gradients of individuals, leaf traits vary--going from buffered [shaded] to exposed canopy positions [@casasSunShadeLeaves2011]-- at a leaf anatomical, structural and biochemical level [@sackHowStrongIntracanopy2006; @niinemetsWorldwideAnalysisWithincanopy2015; @chenLeafEconomicsSpectrum2020]. These trait-patterns contribute to [understanding] vertical $T_{leaf}$ dynamics [@fauset_differences_2018; @michaletzEnergeticCarbonEconomic2016] where Table `r table_leaf_traits` summarizes relevant traits for thermal sensitivity. Further, there is a need for research to characterize trait relationships and responses through the vertical canopy, because LES theory was developed using mainly sun exposed (upper canopy) leaves [@chenLeafEconomicsSpectrum2020; @keenanGlobalLeafTrait2016]. 
 
 ![Table `r table_leaf_traits`. (*For latest version of table, see tables.pdf.*)](table1.png)
 
@@ -254,27 +254,27 @@ nocite: |
 
 #### Morphological traits
 
-Exposed-canopy leaves are better adapted to heat and water stress than shaded-leaves where sun-leaves are often thicker, smaller, hairier, with greater leaf dissections [@leighInfluenceLeafSize2017; @vogelConvectiveCoolingLow1970; @sackHowStrongIntracanopy2006], hydraulically efficient [Brodribb et al. 2010], with adaptive strategies such as leaf-angle and rolling [@niinemetsAdjustmentFoliageStructure1998]. All, collectively regulate $T_{leaf}$-photosynthetic balance.On the other hand, shaded leaves invest more in light capture than in heat dissipation, with lower convective cooling [@fauset_differencsunes_2018; @leighInfluenceLeafSize2017; Wright et al. 2019]. Under homogeneous light conditions, sun-leaves in different canopy orientations are shaped based on $T_{air_{max}}$ and $VPD$ stress [@mediavillaFoliarPlasticityRelated2019a]. 
+Exposed-canopy leaves are better adapted to heat and water stress than shaded-leaves where sun-leaves are often thicker, smaller, hairier, with greater leaf dissections [@leighInfluenceLeafSize2017; @vogelConvectiveCoolingLow1970; @sackHowStrongIntracanopy2006], hydraulically efficient [Brodribb et al. 2010], with adaptive strategies such as leaf-angle and rolling [@niinemetsAdjustmentFoliageStructure1998]. All, collectively regulate $T_{leaf}$-photosynthetic balance. Whereas, shaded leaves invest more in light capture than in heat dissipation, with lower convective cooling [@fauset_differencsunes_2018; @leighInfluenceLeafSize2017; Wright et al. 2019]. Under homogeneous light conditions, sun-leaves in canopy orientations are shaped based on canopy $T_{air_{max}}$ and $VPD$ stress [@mediavillaFoliarPlasticityRelated2019a].
 
 #### Biochemical and physiological traits
 
-The distribution of biochemical traits enable photosynthesis and metabolic processes, and protect against heat and light damage in sun-leaves. $N_{area}$, that is typically greater in the direction of new leaf growth [@niinemetsPhotosynthesisResourceDistribution2007a], optimizes to prevent photoinhition in sun- and, shade-leaves during sunflecks, under available soil nitrogen [@kitaoCanopyNitrogenDistribution2018].Similarly, carotenoids and xanthophyll pigments-violaxanthin, antheraxanthin and zeaxanthin [$VAZ$], an antioxidant scavenging and photoprotective function- convert excess light to heat dissaptation [@mathurPhotosyntheticEfficiencySun2018a; @niinemetsAcclimationHighIrradiance1998]. Constraints to biochemical traits, particularly $VAZ$ can curb temperature acclimation [@kumarathungeAcclimationAdaptationComponents2019a]. Additionally, isoprene producing species are particularly advantageous in that it facilitates high heat tolerance in canopy positions[*REF*]
+The distribution of biochemical traits enable photosynthesis and metabolic processes, and protect against heat and light damage in sun-leaves. $N_{area}$, that is typically greater in the direction of new leaf growth [@niinemetsPhotosynthesisResourceDistribution2007a], optimizes to prevent photoinhition in sun- and, shade-leaves during sunflecks, under available soil nitrogen [@kitaoCanopyNitrogenDistribution2018].Similarly, carotenoids and xanthophyll pigments-violaxanthin, antheraxanthin and zeaxanthin [$VAZ$], an antioxidant scavenging function- convert excess light to heat dissaptation [@mathurPhotosyntheticEfficiencySun2018a; @niinemetsAcclimationHighIrradiance1998]. Constraints to biochemical traits, particularly $VAZ$ can curb temperature acclimation [@kumarathungeAcclimationAdaptationComponents2019a]. Additionally, isoprene-producing species are particularly advantageous in that they have higher heat tolerance in exposed-canopies [*REF*]
 
 ### Interspecific variation 
 
-Across forest species widely, show fundamental trait adaptation to light gradients similar to within-canopy traits [@rozendaalPlasticityLeafTraits2006; @thomasPhotosyntheticDifferencesSaplings2002; @houterOntogeneticChangesLeaf2012]. However, between multi-species canopy and understory, trait plasticity to similar biophysical gradients can vary several-folds due to inherent specie-specific traits. Spatio-temporal gradients offer another axis for trait variation, as they are heterogenous in time and space [Ishii and Asano, 2007]. Across ontogeny of the same species in canopy and understory, traits such as LMA, photosynthetic capacity [per area] and $gs$ increase with height, separate from light [@thomasPhotosyntheticDifferencesSaplings2002; @houterOntogeneticChangesLeaf2012]. Therefore, while general patterns of thermoregulation can be observed across species, some might be more suspectable to heat stress at a vertical gradient than others [@fauset_differences_2018].
+Across forest species, widely, show fundamental trait adaptation to light gradients similar to within-canopy traits [@rozendaalPlasticityLeafTraits2006; @thomasPhotosyntheticDifferencesSaplings2002; @houterOntogeneticChangesLeaf2012]. However, between multi-species canopy and understory, trait plasticity to similar biophysical gradients can vary several-folds due to inherent specie-specific traits. Spatio-temporal gradients offer another axis for trait variation, as they are heterogenous in time and space [Ishii and Asano, 2007]. Across ontogeny of the same species in canopy and understory, traits such as LMA, photosynthetic capacity [per area] and $gs$ increase with height, separate from light [@thomasPhotosyntheticDifferencesSaplings2002; @houterOntogeneticChangesLeaf2012]. Therefore, while general patterns of thermoregulation can be observed across species, some might be more suspectable to heat stress at a vertical gradient than others [@fauset_differences_2018].
 
 #### Leaf lifespan and Deciduousness ("Lifecycle / ecological traits? ")
 
 
 ##### *Leaf lifespan*  
 
-New-leaf growth along the light gradient constantly shades leaves underneath. Therefore, exposed-canopies have greater proportion of young leaves than shaded regions that have older leaves. Acclimation to shade from sun-exposure, and vice-versa, is more possible in younger leaves that are devoloping traits than in mature leaves where traits have been developed. In such cases, change in light can result in dropping of leaves [Niinemetes, 2007]. *Leaf turnover tends to be greater in the sun (in the tropics), so of your standing stock of leaves (at least in evergreen species) sun leaves should be younger than shade leaves. This is bound to affect metabolism, and may affect other aspects of their performance.*
-
+New-leaf growth along the light gradient constantly shades leaves underneath. Therefore, exposed-canopies have greater proportion of young leaves than shaded regions that have older leaves. Acclimation to shade from sun-exposure, and vice-versa, is more possible in younger than mature leaves, due to devoloping traits that can acclimate. Whereas, change in light for mature leaves can result in leaves dropping [Niinemetes, 2007]. *Leaf turnover tends to be greater in the sun (in the tropics), so of your standing stock of leaves (at least in evergreen species) sun leaves should be younger than shade leaves. This is bound to affect metabolism, and may affect other aspects of their performance.*
 
 ##### *Deciduousness*
 
-Deciduousness as a leaf trait is an adaptation to water and heat stress. Indeed, greater proportion of deciduous species are found in drier tropicaal regions than wetter,  and among species individuals that can be deciduous, greater proportion are in larger size classes than understory species that are seldom deciduous [@conditQuantifyingDeciduousnessTropical2000b]. Therefore, deciduous leaf-loss can influence biophysical gradient and $T_{leaf}$ [@rey-sanchez_spatial_2016]. Spatio-temporal leaf-emergence in deciduous-temperate forests also shapes biophysical gradient where leaf-emergence is delayed with height-ontogeny with understory species leafing-out earlier than canopy trees [Vitasse et al. 2013; @seiwaChangesLeafPhenology1999]. 
+Deciduousness as a leaf trait is an adaptation to water and heat stress. Indeed, greater proportion of deciduous species are found in drier tropical regions than wetter. Among species individuals that can be deciduous, greater proportion are in larger size classes than understory species that are seldom deciduous [@conditQuantifyingDeciduousnessTropical2000b] where, deciduous leaf-loss can influence biophysical gradient and $T_{leaf}$ [@rey-sanchez_spatial_2016]. Spatio-temporal leaf-emergence in deciduous-temperate forests also shapes biophysical gradient where leaf-emergence is delayed with height-ontogeny with understory species leafing-out earlier than canopy trees [Vitasse et al. 2013; @seiwaChangesLeafPhenology1999]. 
+
 
 
 ## Leaf metabolism and thermal responses
@@ -294,7 +294,7 @@ nocite: |
 
 ### Stomatal conductance
 
-While $gs$ mediates crucial leaf-atmosphere interaction across species, exposed-sun-leaves, though equipped to thermoregulate efficiently are largely constrained by $gs$ than shade-leaves [@sanchesDifferentialLeafTraits2010; @hernandezSimilarTemperatureDependence2020]. Max transpiration rate and $gs$ peaks in exposed-canopies during the day [@kosugiSeasonalFluctuationsTemperature2006; @sanchesDifferentialLeafTraits2010] and declines through midday and afternoon due to stomtal closure [@sanchesDifferentialLeafTraits2010; @zwienieckiHydraulicLimitationsImposed2004; @kochDiurnalPatternsLeaf1994b]. 
+While $gs$ mediates crucial leaf-atmosphere interactions across species, exposed-sun-leaves, though equipped with thermoregulatory effiency are largely constrained by $gs$ than shade-leaves [@sanchesDifferentialLeafTraits2010; @hernandezSimilarTemperatureDependence2020]. Where maximum transpiration rate and $gs$ peaks during the day [@kosugiSeasonalFluctuationsTemperature2006; @sanchesDifferentialLeafTraits2010] and declines during midday and afternoon due to stomtal closure [@sanchesDifferentialLeafTraits2010; @zwienieckiHydraulicLimitationsImposed2004; @kochDiurnalPatternsLeaf1994b]. 
 
 ### Photosynthesis
 
@@ -306,10 +306,7 @@ In response to the greater light availability, sun-leaves have traits allowing g
 $T_{leaf}$ beyond photosynthetic $T_{opt}$, declines photosynthesis due it's peaked response to temperature. Photosynthesis is commonly found to be maximized at the prevalent ambient growing season conditions (Tan et al. 2017; @slotSituTemperatureResponse2017). Beyond the optimum, photosynthesis decreases as a result of stomatal closure and increasing $T_{leaf}$ (e.g. @slotSituTemperatureResponse2017; Smith et al. 2020 [temperate/boreal refs needed) and eventually due to biochemical constraints (@kumarathungeAcclimationAdaptationComponents2019a; e.g. Sage & Kubien 2007; Varhammer et al. 2015 ). Heat stress at $40-60{^\circ}C$ can cause irreversible damage to photosystem [II] leading to leaf necrosis and eventually leaf death [Baker 2008; @feeley_thermal_2020].  
 
 **We have very little evidence as to how the temperature sensitivity of photosynthesis compares between sun and shade leaves.**
-Biophysically, we might expect that sun leaves should tend to have a stronger temperature-dependence and higher temperature optima than shade leaves (Fig. 14.5 in Campbell and Norman 1998; *revisit this!*), based on evidence that $T_{opt}$ of $J_{max}$ increased with irradiance in an upper canopy leaf compared to shaded lower canopy leaf [@niinemetsPhotosyntheticAcclimationSimultaneous2004b]. However, such a trend is not apparent among recent studies that compared temperature sensitivity of photosynthesis in sun and shade leaves.
-
-For 3 species in Panama, the optimum temperature for sun leaves tended to be slightly higher than that of shade leaves, but differences were not significant [Slot et al. 2019 ; @hernandezSimilarTemperatureDependence2020].Similar results were shown for $T_{opt}$ of $V_{max}$ and $J_{max}$ of tropical sun- and shade-leaves [@slotPhotosyntheticHeatTolerance2019a; @hernandezSimilarTemperatureDependence2020], and across a vertical gradient of tropical trees [@mau_temperate_2018; @millerOnlySunlitLeaves2021], and temperate trees [@mau_temperate_2018].
-
+Biophysically, we might expect sun-leaves to have a stronger temperature-dependence and higher temperature optima than shade leaves (Fig. 14.5 in Campbell and Norman 1998; *revisit this!*), based on evidence that $T_{opt}$ of $J_{max}$ increased with irradiance in an upper-canopy leaf compared to shaded lower-canopy leaf [@niinemetsPhotosyntheticAcclimationSimultaneous2004b]. However, such a trend is not apparent among recent studies, where for 3 species in Panama, the optimum temperature for sun leaves tended to be slightly higher than that of shade leaves, but differences were not significant [Slot et al. 2019 ; @hernandezSimilarTemperatureDependence2020]. Similarly, $T_{opt}$ of $V_{max}$ and $J_{max}$ didnot vary for tropical sun- and shade-leaves  [@slotPhotosyntheticHeatTolerance2019a; @hernandezSimilarTemperatureDependence2020], along the vertical gradient of tropical trees [@mau_temperate_2018; @millerOnlySunlitLeaves2021], and temperate trees [@mau_temperate_2018].
 
 **Leaf thermal tolerance (Tcrit/ T50)**
 
@@ -317,19 +314,18 @@ $T_{crit}$ is the temperature at which efficiency of photosystem II starts to de
 
 **Thermal tolerance (e.g., $T_{50}$) sparsely varies with exposure among recent studies, but there are no studies isolating effect of height.**
 
-150 years ago,  Sachs studied garden species $T_{50}$, though, with little information on shade-leaves [*REF*]. In 1994, Knapp et al. showed that in tall grass prarie gallery forest in Kansas, photosynthetic heat tolerance measured on chinquapin oak (*Quercus muehlenbergii*) that grew in xeric, sunnier conditions was higher by $2{^\circ}C$ than bur oak (*Quercus macrocarpa*) that grew in shaded mesic conditions. In both species photosynthetic heat tolerance increased seasonally from June to August. However, more recetly @slotPhotosyntheticHeatTolerance2019a found that though $T_{50}$ was slightly lower for shade than sun-exposed leaves for two of three species in Panama tropical forest, the results weren't significant, with both measured near ground level. 
+In 1994, Knapp et al. showed that in tall grass prarie gallery forest in Kansas, photosynthetic heat tolerance measured on chinquapin oak (*Quercus muehlenbergii*) that grew in xeric, sunnier conditions was higher by $2{^\circ}C$ than bur oak (*Quercus macrocarpa*) that grew in shaded mesic conditions. In both species photosynthetic heat tolerance increased seasonally from June to August. However, more recently @slotPhotosyntheticHeatTolerance2019a found that $T_{50}$ was slightly lower for shade than sun-exposed leaves for two of three species in Panama tropical forest, but results weren't significant, with both measured near ground level. 
 
-$T_{50}$ in *Acacia Papyrocarpa* (Benth.) trees in an arid region was observed to reflect microclimatic stress index along a vertical gradient where lower north-facing canopy showed higher composite climate stress and greater $T_{50}$ than other canopy positions, that correlated with low wind-speed greater $T_{air}$ and longer leaf thermal time constants [@curtis_intracanopy_2019]. 
+Leaf thermal tolerances across species might reflect local microenvironmental conditions than regional macroclimate [@feeley_thermal_2020; Slot et al. 2020] where $T_{50}$ in *Acacia Papyrocarpa* (Benth.) trees in an Australian arid region showed higher composite climate stress and greater $T_{50}$ than other canopy positions, that correlated with low wind-speed, greater $T_{air}$ and longer leaf thermal time constants [@curtis_intracanopy_2019].
 
 We're not aware of any other studies on this."we may want to argue that we have no *a priori* reasons to expect thermal tolerance to scale with height per se (or do we?). I think it makes sense to expect variation with light exposure because of the associated differences in temperature you can expect the leaves to be exposed to, but height itself should not affect heat tolerance other than through associated traits perhaps"--Martijn Slot*
 
 *If we take geographic gradients as a reliable proxy, we'd expect temperature sensitivities to reflect the environment to which the trees are adapted/ acclimatized.*
 
 
-Recent studies show that while leaf thermal tolerances across species reflects local microenvironmental conditions than regional macroclimate, [@feeley_thermal_2020; Slot et al. 2020; Perez and Feely 2020a] $T_{50}$ does not vary with phylogeny [Slot et al. 2020; Perez and Feeley 2020a]. 
+Global $T_{50}$s across latitude and climate range from ~45-50$^\circ$C (O' sullivan et al. 2017) and $T_{50}$ and $T_{crit}$ decrease with elevation among tropical forests and across latitudes [@feeley_thermal_2020;  @slotLeafHeatTolerance2020; @osullivanThermalLimitsLeaf2017]. 
 
-Global $T_{50}$s across latitude and climate range from ~45-50$^\circ$C (O' sullivan et al. 2017). $T_{50}$ and $T_{crit}$, decrease with elevation in tropical forests and across latitudes [@feeley_thermal_2020;  @slotLeafHeatTolerance2020; @osullivanThermalLimitsLeaf2017], vary with species [@krauseHightemperatureToleranceTropical2010a] and leaf traits [Sastry et al. 2018, @zhang_photosynthetic_2012; @slotLeafHeatTolerance2020]. $T_{crit}$ is also recently found to be greater in species with large leaves, and slow heating and cooling time [higher thermal time constant] whereas $T_{50}$ is found to be greater among species' leaves with greater construction costs--greater LMA--compared to species with low LMA [@slotLeafHeatTolerance2020]. @perezPhotosyntheticHeatTolerances2020 also found that, across species sun leaves that showed higher photosynthetic heat tolerance experienced higher $T_{leaf_{max}}$, and showed low optimum temperature for C assimilation [$T_{opt}$] and therefore had a narrower breadth of thermal safety margins ($T_{leaf_{max}}$-$T_{50}$). 
-
+Additionally, $T_{50}$ varies with species [@krauseHightemperatureToleranceTropical2010a]and leaf traits and does not vary with phylogeny [Slot et al. 2021; Perez and Feeley, 2020a]. Recently, @slotLeafHeatTolerance2020 found that $T_{crit}$ was greater among tropical species' large leaves, with slow heating and cooling time [higher thermal time constant] whereas $T_{50}$ was greater among species' leaves with greater construction costs--greater LMA--compared to species with low LMA. @perezPhotosyntheticHeatTolerances2020 also found that, across species sun leaves that showed higher photosynthetic heat tolerance, experienced higher $T_{leaf_{max}}$, but showed low optimum temperature for C assimilation [$T_{opt}$] and therefore had a narrower breadth of thermal safety margins ($T_{leaf_{max}}$-$T_{50}$). 
 
 ### Respiration
 
@@ -337,7 +333,6 @@ Global $T_{50}$s across latitude and climate range from ~45-50$^\circ$C (O' sull
 
 Across species in north-eastern oak deciduous forest, conifer temperate rainforest and in *Liquidambara styraciflua* tree, $Q_{10}$ is observed to be greater in upper-canopy leaves than in shaded lower-canopy leaves, with differing values between species [@turnbullScalingFoliarRespiration2003; @harleyEffectsLightTemperature1996]. In contrast, in a lowland tropical Australian forest study, $Q_{10}$ did not vary across species vertical profiles [@weerasingheCanopyPositionAffects2014], similary across temperate trees at Coweeta though with a slight tendency to increase down the canopy relative to upper-canopy leaves as $T_{air}$ increased (*see their Fig. 1*)[@bolstad_foliar_1999]. (*Martijn has some unpublished data on this that we might include.unpublished data showing higher Q10 in shade than in sun leaves for 10 species or so. May make sense to include here: https://github.com/EcoClimLab/vertical-thermal-review/issues/8.*). @bolstad_foliar_1999 also found evidence of acclimation, but there remained a declining trend of respiration with elevation.
 
-Further information from fluxnet global data analysis shows that with temperature increase, foliage photosynthesis and respiration are coupled at different rates upto photosynthetic thermal optimum, beyond this inflection point, photosynthesis declines whereas respiration increases exponentially, therfore, moving from carbon sink to carbon source, independent of water and irradiance [@duffyHowCloseAre2021]
 
 ### VOC production
 
@@ -402,7 +397,7 @@ Canopy buffering is crucial to microclimate functioning, which is influenced by 
 
 ### warming
 
-While forest microclimates are insulated from macroclimatic extremes, they are still subjected to warming trends [@bertrandCommentForestMicroclimate2020; @maesPlantFunctionalTrait2020]. Warming will disproportionately affect the less warm-adapted functional types within the forest canopy, essentially creating holes in the canopy that will take a long time to refill (especially in slow-growing tropical sub-canopy specialists), as is observed with understory plant thermophilization (death is faster than recruitment and growth) [@duqueThermophilizationAdultJuvenile2015a; @zellweger_forest_2020; @zellweger_seasonal_2019; @defrenneMicroclimateModeratesPlant2013] with increasing threat to fauna in microrefugias [@scheffersMicrohabitatsReduceAnimal2013] . Tree-ring analysis in mesic temperate forests shows reduced growth of understory trees relative to overstory with warming temperatures [@rollinsonClimateSensitivityUnderstory, 2020]. Whereas, in other cases warming is associated with taller understory trees with lower LMA that complete their lifecycle in the understory, under closed-canopy temperate forests [@maesPlantFunctionalTrait2020]. Heatwave and temperature  can alter canopy and understory phenology, forest photosynthesis and forest C uptake [REFS, @zohnerOngoingSeasonallyUneven2019].
+While forest microclimates are insulated from macroclimatic extremes, they are still subjected to warming trends [@bertrandCommentForestMicroclimate2020; @maesPlantFunctionalTrait2020]. Warming will disproportionately affect the less warm-adapted functional types within the forest canopy, essentially creating holes in the canopy that will take a long time to refill (especially in slow-growing tropical sub-canopy specialists), as is observed with understory plant thermophilization (death is faster than recruitment and growth) [@duqueThermophilizationAdultJuvenile2015a; @zellweger_forest_2020; @zellweger_seasonal_2019; @defrenneMicroclimateModeratesPlant2013] with increasing threat to fauna in microrefugias [@scheffersMicrohabitatsReduceAnimal2013] . Tree-ring analysis in mesic temperate forests shows reduced growth of understory trees relative to overstory with warming temperatures [@rollinsonClimateSensitivityUnderstory, 2020]. Whereas, in other cases warming is associated with taller understory trees with lower LMA that complete their lifecycle in the understory, under closed-canopy temperate forests [@maesPlantFunctionalTrait2020]. Heatwave and temperature  can alter canopy and understory phenology, forest photosynthesis and forest C uptake [REFS, @zohnerOngoingSeasonallyUneven2019].Further information from fluxnet global data analysis shows that with temperature increase, foliage photosynthesis and respiration are coupled at different rates upto photosynthetic thermal optimum, beyond this inflection point, photosynthesis declines whereas respiration increases exponentially, therfore, moving from carbon sink to carbon source, independent of water and irradiance [@duffyHowCloseAre2021].
 
 Differential mortality within the canopy structure will alter the profile of metabolism and hence emergent forest function. Such alteration to canopy structure may be detectable by lidar and thermal remote sensing. If we know how metabolism maps to the thermal profile, then the observed forest structural changes can inform prediction of forest function.
  
